--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('../partials/head') -%>
+    <link rel="shortcut icon" type="image/jpg" href="public/favicon.png" />
 </head>
 
 <body class="container">
