--- a/views/pages/table.ejs
+++ b/views/pages/table.ejs
@@ -4,6 +4,7 @@
 <head>
     <%- include('../partials/head') -%>
 	<link rel="stylesheet" href="public/main.css">
+	<link rel="shortcut icon" type="image/jpg" href="public/favicon.png" />
 </head>
 
 <body class="container">
